--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>Javascript Day6</h1>
     <h2>Async await - Fetch API and Get/Post Request</h2>
-    <script src="POSTRequestofFetchAPI.js"></script>
+    <script src="errorHandling.js"></script>
   </body>
 </html>
